--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-dev-client": "~5.0.4",
     "expo-dev-launcher": "^5.0.17",
     "expo-font": "~13.0.3",
+    "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.6",
     "expo-screen-orientation": "^8.0.4",
@@ -44,6 +45,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^4.14.1",
