--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "plushie",
+  "name": "plushie-chronicles",
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
@@ -17,8 +17,8 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-navigation/native": "^7.1.4",
-    "@react-navigation/native-stack": "^7.3.8",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "@supabase/supabase-js": "^2.38.4",
     "@tamagui/animations-react-native": "^1.125.8",
     "@tamagui/font-inter": "^1.125.8",
@@ -26,15 +26,15 @@
     "@tamagui/react-native-media-driver": "^1.125.8",
     "@tamagui/shorthands": "^1.125.8",
     "@tamagui/themes": "^1.125.8",
-    "expo": "^52.0.44",
+    "expo": "~52.0.46",
     "expo-av": "^15.0.2",
     "expo-constants": "~17.0.8",
     "expo-dev-client": "~5.0.4",
     "expo-dev-launcher": "^5.0.17",
     "expo-font": "~13.0.3",
-    "expo-linear-gradient": "^14.0.2",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.6",
+    "expo-router": "~4.0.21",
     "expo-screen-orientation": "^8.0.4",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.9",
@@ -48,7 +48,7 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "^3.16.2",
-    "react-native-safe-area-context": "^4.14.1",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.4.17",
